[package]
name = "lte-m-button"
version = "0.1.0"
authors = ["SORACOM"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
soracom-orbit-sdk = { path = "../../" }
